  [kdeldycke]

- Always transform permissions to upper strings.
  [kdeldycke]

- Allow custom components to have no owner.
  [kdeldycke]

- Let's install the Babel package which add support of i18n to Trac.
  [kdeldycke]

- Add initial support for multiple repositories.
  [kdeldycke]

- Remove the TracSubversionLocation plugin as its features are now implemented
  by Trac itself.
  [kdeldycke]


0.3.0 (2010-10-08)
==================

- Force upgrade of informations used during initialization: this is necessary
  to keep these parameters fresh if the Trac project structure already exists.
  [kdeldycke]

- Get the latest Trac 0.11.x but exclude the 0.12.x branch.
  [kdeldycke]

- Document all supported options.
  [kdeldycke]

- Add new options: project-description and footer-message.
  [kdeldycke]

- Reuse the description as alternative text to the logo.
  [kdeldycke]

- Add support for all SMTP parameters.
  [kdeldycke]

- Add support for trac.ini custom parameters.
  [kdeldycke]

- Auto-install Pygments to benefit syntax highlighting.
  [kdeldycke]

- Use pytz to get nice and friendly timezones.
  [kdeldycke]

- Bring docutils to add reStructuredText (rst) support in Trac's wiki.
  [kdeldycke]

- Add an option to let the user choose if default data added by Trac should be 
  removed or not.
  [kdeldycke]

- Auto-upgrade Trac instance against latest scheme. Add an option to let user
  force the upgrade.
  [kdeldycke]

- Add an option to force upgrade of Wiki pages that are part of the
  self-documentation embedded in the Trac instance.
  [kdeldycke]

- Set default value of the smtp-from-name parameter.
  [kdeldycke]

- Add an option to force resynchronization of Trac against the source code
  repository.
  [kdeldycke]

- Add an option to enable the time management plugin.
  [kdeldycke]

- Replace buildbot-url parameter by a more generic additional-menu-items
  option.
  [kdeldycke]

- Allow the creation of multiple custom milestones.
  [kdeldycke]
