@@ -23,6 +23,9 @@
   by Trac itself.
   [kdeldycke]
 
+- Add an option to set the default repository.
+  [kdeldycke]
+
 
 0.3.0 (2010-10-08)
 ==================
